# scortonjs

./: .gitignore  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  CONTRIBUTING.md  Cursor.md  FRAMEWORK_GUIDE.md  LICENSE  LICENSE-SORL  Makefile  PRD.md  PRODUCTION_STATUS.md  README.md  RUST_INTEGRATION.md  activate.sh  cli.js  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scorton.py  setup.py
.github/workflows/: ci.yml
src/: index.js
src/commands/: hello.js
tests/: cli.test.js  test_scorton.py
